Fix static asset paths for admin and web frontends

--- a/deployment/nginx.conf
+++ b/deployment/nginx.conf
@@ -72,12 +72,20 @@ server {
         alias /var/www/tlp-admin;
         index index.html;
         try_files $uri $uri/ /admin/index.html;
-        
-        # Cache control for static assets
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-            expires 1y;
-            add_header Cache-Control "public, immutable";
-        }
+    }
+    
+    # Admin static assets (must be before /admin location to catch /static/...)
+    location /static {
+        alias /var/www/tlp-admin/static;
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+    }
+    
+    # Admin CSS/JS assets
+    location ~* ^/admin/static/(.*)$ {
+        alias /var/www/tlp-admin/static/$1;
+        expires 1y;
+        add_header Cache-Control "public, immutable";
     }
 
     # User Frontend - Root location
