--- a/api/admin/package.json
+++ b/api/admin/package.json
@@ -2,6 +2,7 @@
   "name": "admin",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/admin",
   "dependencies": {
     "@mui/material": "^5.15.0",
     "@mui/icons-material": "^5.15.0",
