Fix nginx static asset location matching for admin

--- a/deployment/nginx.conf
+++ b/deployment/nginx.conf
@@ -74,18 +74,12 @@ server {
         try_files $uri $uri/ /admin/index.html;
     }
     
-    # Admin static assets (must be before /admin location to catch /static/...)
-    location /static {
-        alias /var/www/tlp-admin/static;
+    # Admin static assets - handle both /static/ and /admin/static/ paths
+    location ~* ^/(admin/)?static/(.*)$ {
+        alias /var/www/tlp-admin/static/$2;
         expires 1y;
         add_header Cache-Control "public, immutable";
-    }
-    
-    # Admin CSS/JS assets
-    location ~* ^/admin/static/(.*)$ {
-        alias /var/www/tlp-admin/static/$1;
-        expires 1y;
-        add_header Cache-Control "public, immutable";
+        access_log off;
     }
 
     # User Frontend - Root location
