Enable manual web deployment trigger

--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -7,6 +7,11 @@ on:
       - 'web/**'
       - '.github/workflows/deploy-web.yml'
   workflow_dispatch:
+    inputs:
+      force_deploy:
+        description: 'Force deployment even if no changes'
+        required: false
+        default: 'false'
 
 jobs:
   deploy:
