--- a/deployment/nginx.conf
+++ b/deployment/nginx.conf
@@ -29,6 +29,8 @@ server {
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
     add_header Referrer-Policy "no-referrer-when-downgrade" always;
+    # Prevent browsers from upgrading HTTP to HTTPS
+    add_header Strict-Transport-Security "" always;
 
     # Gzip Compression
     gzip on;
