--- a/mobile/app.json
+++ b/mobile/app.json
@@ -47,7 +47,7 @@
       ]
     ],
     "extra": {
-      "apiUrl": "http://localhost:3007"
+      "apiUrl": "http://192.168.0.102:3007"
     }
   }
 }
