--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,8 @@
     "@fullcalendar/interaction": "^6.1.19",
     "@fullcalendar/react": "^6.1.19",
     "@fullcalendar/timegrid": "^6.1.19",
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^8.17.10",
     "@tailwindcss/postcss": "^4.1.16",
     "axios": "^1.13.1",
     "chart.js": "^4.5.1",
@@ -21,7 +23,9 @@
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.5"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.9.5",
+    "three": "^0.169.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
