--- a/web/package.json
+++ b/web/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "ci": "npm ci --include=optional"
   },
   "dependencies": {
     "@fullcalendar/daygrid": "^6.1.19",
