--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -35,11 +35,9 @@ jobs:
           rm -rf node_modules
           # Use npm install (handles optional deps better than npm ci for this bug)
           npm install --include=optional
-          # Explicitly verify rollup Linux binary is installed, install if missing
-          if [ ! -d "node_modules/@rollup/rollup-linux-x64-gnu" ]; then
-            echo "Installing missing rollup Linux binary..."
-            npm install --save-optional @rollup/rollup-linux-x64-gnu@4.52.5
-          fi
+          # Explicitly install platform-specific optional dependencies (workaround for npm bug)
+          echo "Ensuring platform-specific optional dependencies are installed..."
+          npm install --save-optional @rollup/rollup-linux-x64-gnu@4.52.5 lightningcss-linux-x64-gnu@1.30.2 @tailwindcss/oxide-linux-x64-gnu@4.1.16 || true
           echo "Verifying package.json scripts..."
           grep -A 10 '"scripts"' package.json || echo "package.json not found"
 
@@ -77,11 +75,9 @@ jobs:
             # Work around npm bug with optional dependencies
             rm -rf node_modules
             npm install --include=optional
-            # Explicitly verify rollup Linux binary is installed, install if missing
-            if [ ! -d "node_modules/@rollup/rollup-linux-x64-gnu" ]; then
-              echo "Installing missing rollup Linux binary..."
-              npm install --save-optional @rollup/rollup-linux-x64-gnu@4.52.5
-            fi
+            # Explicitly install platform-specific optional dependencies (workaround for npm bug)
+            echo "Ensuring platform-specific optional dependencies are installed..."
+            npm install --save-optional @rollup/rollup-linux-x64-gnu@4.52.5 lightningcss-linux-x64-gnu@1.30.2 @tailwindcss/oxide-linux-x64-gnu@4.1.16 || true
             echo "🔨 Building production bundle..."
             VITE_API_URL=${{ secrets.API_URL }} npm run build || { echo "❌ Build failed"; exit 1; }
             echo "📁 Setting up web root directory..."
