--- a/api/admin/package.json
+++ b/api/admin/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "homepage": "/admin",
   "dependencies": {
-    "@mui/material": "^5.15.0",
     "@mui/icons-material": "^5.15.0",
+    "@mui/material": "^5.15.0",
     "react": "^18.2.0",
     "react-admin": "^5.12.2",
     "react-dom": "^18.2.0",
+    "react-markdown": "^10.1.0",
     "react-scripts": "5.0.1",
+    "recharts": "^3.4.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
