--- a/web/package.json
+++ b/web/package.json
@@ -21,11 +21,14 @@
     "axios": "^1.13.1",
     "chart.js": "^4.5.1",
     "fullcalendar": "^6.1.19",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.9.5",
+    "react-simple-maps": "^3.0.0",
     "three": "^0.169.0"
   },
   "devDependencies": {
