--- a/api/admin/package.json
+++ b/api/admin/package.json
@@ -6,9 +6,12 @@
   "dependencies": {
     "@mui/icons-material": "^5.15.0",
     "@mui/material": "^5.15.0",
+    "@types/leaflet": "^1.9.21",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-admin": "^5.12.2",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-markdown": "^10.1.0",
     "react-scripts": "5.0.1",
     "recharts": "^3.4.1",
