--- a/api/package.json
+++ b/api/package.json
@@ -29,7 +29,10 @@
     "sync:historical": "node scripts/fetch_historical_launches.js",
     "sync:details": "node scripts/fetch_historical_launches.js --verbose",
     "sync:new": "node scripts/check_new_launches.js --verbose",
+    "sync:upcoming": "node scripts/sync_upcoming_previous_launches.js",
     "test:email": "node scripts/test-brevo-email.js",
+    "setup:cron": "bash scripts/setup_cron_on_deploy.sh",
+    "postinstall": "chmod +x scripts/*.sh 2>/dev/null || true",
     "start": "node index.js",
     "dev": "nodemon index.js"
   }
