Add secure admin creation script and modernize homepage
- Add create_secure_admin.js script with email/password validation
- Add comprehensive admin setup documentation
- Modernize homepage with three-column layout and enhanced sections
- Add rocket API integration for Spacebase section
- Improve responsive design and content organization

--- a/api/package.json
+++ b/api/package.json
@@ -27,6 +27,7 @@
     "seed:launches": "node scripts/seed_launch_data.js",
     "seed:countries": "node scripts/seed_countries.js",
     "seed:crew": "node scripts/seed_crew_members.js",
+    "create:admin": "node scripts/create_secure_admin.js",
     "sync:launches": "node scripts/syncLaunches.js",
     "sync:historical": "node scripts/fetch_historical_launches.js",
     "sync:details": "node scripts/fetch_historical_launches.js --verbose",
