Enable HTTPS in nginx.conf with Let's Encrypt cert paths (tlpnetwork.com)

--- a/deployment/nginx.conf
+++ b/deployment/nginx.conf
@@ -19,11 +19,10 @@ server {
         allow all;
     }
 
-    # Redirect TLPNetwork.com and www to HTTPS (only when SSL is set up)
-    # Uncomment after running certbot for TLPNetwork.com
-    # if ($host ~* ^(TLPNetwork\.com|www\.TLPNetwork\.com)$) {
-    #     return 301 https://$host$request_uri;
-    # }
+    # Redirect TLPNetwork.com and www to HTTPS
+    if ($host ~* ^(TLPNetwork\.com|www\.TLPNetwork\.com|tlpnetwork\.com|www\.tlpnetwork\.com)$) {
+        return 301 https://$host$request_uri;
+    }
 
     # Security Headers
     add_header X-Frame-Options "SAMEORIGIN" always;
@@ -108,73 +107,73 @@ server {
     error_log /var/log/nginx/tlp-error.log;
 }
 
-# HTTPS Server for TLPNetwork.com (uncomment after running certbot)
-# server {
-#     listen 443 ssl http2;
-#     listen [::]:443 ssl http2;
-#     server_name TLPNetwork.com www.TLPNetwork.com;
-#
-#     # SSL Configuration (Let's Encrypt)
-#     ssl_certificate /etc/letsencrypt/live/TLPNetwork.com/fullchain.pem;
-#     ssl_certificate_key /etc/letsencrypt/live/TLPNetwork.com/privkey.pem;
-#     ssl_protocols TLSv1.2 TLSv1.3;
-#     ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384;
-#     ssl_prefer_server_ciphers on;
-#     ssl_session_cache shared:SSL:10m;
-#
-#     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-#     add_header X-Frame-Options "SAMEORIGIN" always;
-#     add_header X-Content-Type-Options "nosniff" always;
-#     add_header X-XSS-Protection "1; mode=block" always;
-#
-#     gzip on;
-#     gzip_vary on;
-#     gzip_min_length 1024;
-#     gzip_types text/plain text/css text/xml text/javascript application/javascript application/xml+rss application/json;
-#
-#     root /var/www/tlp-web;
-#     index index.html;
-#
-#     location /api {
-#         proxy_pass http://api_backend;
-#         proxy_http_version 1.1;
-#         proxy_set_header Upgrade $http_upgrade;
-#         proxy_set_header Connection 'upgrade';
-#         proxy_set_header Host $host;
-#         proxy_set_header X-Real-IP $remote_addr;
-#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#         proxy_set_header X-Forwarded-Proto $scheme;
-#         proxy_cache_bypass $http_upgrade;
-#         add_header Access-Control-Allow-Origin * always;
-#         add_header Access-Control-Allow-Methods "GET, POST, PUT, PATCH, DELETE, OPTIONS" always;
-#         add_header Access-Control-Allow-Headers "Authorization, Content-Type" always;
-#         if ($request_method = 'OPTIONS') { return 204; }
-#         proxy_connect_timeout 60s;
-#         proxy_send_timeout 60s;
-#         proxy_read_timeout 60s;
-#     }
-#
-#     location /admin {
-#         alias /var/www/tlp-admin;
-#         index index.html;
-#         try_files $uri $uri/ /admin/index.html;
-#     }
-#     location ~* ^/(admin/)?static/(.*)$ {
-#         alias /var/www/tlp-admin/static/$2;
-#         expires 1y;
-#         add_header Cache-Control "public, immutable";
-#         access_log off;
-#     }
-#
-#     location / {
-#         try_files $uri $uri/ /index.html;
-#         location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-#             expires 1y;
-#             add_header Cache-Control "public, immutable";
-#         }
-#     }
-#     location ~ /\. { deny all; access_log off; log_not_found off; }
-#
-#     access_log /var/log/nginx/tlp-TLPNetwork.com-access.log;
-#     error_log /var/log/nginx/tlp-TLPNetwork.com-error.log;
-# }
+# HTTPS Server for TLPNetwork.com
+server {
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+    server_name TLPNetwork.com www.TLPNetwork.com tlpnetwork.com www.tlpnetwork.com;
+
+    # SSL Configuration (Let's Encrypt) - path is lowercase (cert was issued for tlpnetwork.com)
+    ssl_certificate /etc/letsencrypt/live/tlpnetwork.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/tlpnetwork.com/privkey.pem;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384;
+    ssl_prefer_server_ciphers on;
+    ssl_session_cache shared:SSL:10m;
+
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+
+    gzip on;
+    gzip_vary on;
+    gzip_min_length 1024;
+    gzip_types text/plain text/css text/xml text/javascript application/javascript application/xml+rss application/json;
+
+    root /var/www/tlp-web;
+    index index.html;
+
+    location /api {
+        proxy_pass http://api_backend;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
+        add_header Access-Control-Allow-Origin * always;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, PATCH, DELETE, OPTIONS" always;
+        add_header Access-Control-Allow-Headers "Authorization, Content-Type" always;
+        if ($request_method = 'OPTIONS') { return 204; }
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
+    }
+
+    location /admin {
+        alias /var/www/tlp-admin;
+        index index.html;
+        try_files $uri $uri/ /admin/index.html;
+    }
+    location ~* ^/(admin/)?static/(.*)$ {
+        alias /var/www/tlp-admin/static/$2;
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+        access_log off;
+    }
+
+    location / {
+        try_files $uri $uri/ /index.html;
+        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+        }
+    }
+    location ~ /\. { deny all; access_log off; log_not_found off; }
+
+    access_log /var/log/nginx/tlp-tlpnetwork-access.log;
+    error_log /var/log/nginx/tlp-tlpnetwork-error.log;
+}
