--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
     "@tailwindcss/postcss": "^4.1.16",
     "axios": "^1.13.1",
     "chart.js": "^4.5.1",
+    "d3": "^7.9.0",
     "fullcalendar": "^6.1.19",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
@@ -27,6 +28,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^4.2.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^7.9.5",
     "react-simple-maps": "^3.0.0",
     "satellite.js": "^6.0.1",
